tags/2013-08-29_cppreference/Archive/4086729ce6302786d7180c68b636e3ad-c14c334173ec37b6b5fc49ca1ce2510e/output
+ g++ -std=c++1y -O2 -pthread main.cpp
In file included from /usr/local/include/boost/range/detail/any_iterator.hpp:22:0,
                 from /usr/local/include/boost/range/any_range.hpp:17,
                 from main.cpp:1:
/usr/local/include/boost/range/detail/any_iterator_interface.hpp: In instantiation of ‘struct boost::range_detail::any_single_pass_iterator_interface<IFooBar, boost::any_iterator_buffer<64ul> >’:
/usr/local/include/boost/range/detail/any_iterator_interface.hpp:73:16:   required from ‘struct boost::range_detail::any_single_pass_iterator_interface<const IFooBar&, boost::any_iterator_buffer<64ul> >’
/usr/local/include/boost/range/detail/any_iterator_interface.hpp:99:16:   required from ‘struct boost::range_detail::any_forward_iterator_interface<const IFooBar&, boost::any_iterator_buffer<64ul> >’
/usr/local/include/boost/range/detail/any_iterator_interface.hpp:121:16:   required from ‘struct boost::range_detail::any_bidirectional_iterator_interface<const IFooBar&, boost::any_iterator_buffer<64ul> >’
/usr/local/include/boost/range/detail/any_iterator_interface.hpp:146:16:   required from ‘struct boost::range_detail::any_random_access_iterator_interface<const IFooBar&, long int, boost::any_iterator_buffer<64ul> >’
/usr/local/include/boost/range/detail/any_iterator.hpp:456:13:   required from ‘class boost::range_detail::any_iterator<IFooBar, boost::random_access_traversal_tag, const IFooBar&, long int, boost::any_iterator_buffer<64ul> >’
/usr/include/c++/4.8/bits/stl_iterator_base_types.h:142:1:   [ skipping 3 instantiation contexts, use -ftemplate-backtrace-limit=0 to disable ]
/usr/include/c++/4.8/bits/stl_iterator_base_types.h:159:12:   required from ‘struct std::iterator_traits<boost::range_detail::any_iterator<IFooBar, boost::random_access_traversal_tag, const IFooBar&, long int, boost::any_iterator_buffer<64ul> > >’
/usr/local/include/boost/detail/iterator.hpp:81:8:   required from ‘struct boost::detail::iterator_traits<boost::range_detail::any_iterator<IFooBar, boost::random_access_traversal_tag, const IFooBar&, long int, boost::any_iterator_buffer<64ul> > >’
/usr/local/include/boost/iterator/iterator_traits.hpp:30:75:   required from ‘struct boost::iterator_value<boost::range_detail::any_iterator<IFooBar, boost::random_access_traversal_tag, const IFooBar&, long int, boost::any_iterator_buffer<64ul> > >’
/usr/local/include/boost/range/iterator_range_core.hpp:141:49:   required from ‘class boost::iterator_range<boost::range_detail::any_iterator<IFooBar, boost::random_access_traversal_tag, const IFooBar&, long int, boost::any_iterator_buffer<64ul> > >’
/usr/local/include/boost/range/any_range.hpp:82:15:   required from ‘class boost::range_detail::any_range<IFooBar, boost::random_access_traversal_tag, const IFooBar&, long int>’
main.cpp:21:45:   required from here
/usr/local/include/boost/range/detail/any_iterator_interface.hpp:90:31: error: cannot allocate an object of abstract type ‘IFooBar’
             virtual Reference dereference() const = 0;
                               ^
main.cpp:7:8: note:   because the following virtual functions are pure within ‘IFooBar’:
 struct IFooBar {
        ^
main.cpp:8:18: note: 	virtual void IFooBar::func()
     virtual void func() = 0;
                  ^
In file included from /usr/local/include/boost/range/detail/any_iterator.hpp:23:0,
                 from /usr/local/include/boost/range/any_range.hpp:17,
                 from main.cpp:1:
/usr/local/include/boost/range/detail/any_iterator_wrapper.hpp: In instantiation of ‘class boost::range_detail::any_random_access_iterator_wrapper<boost::indirect_iterator<__gnu_cxx::__normal_iterator<std::unique_ptr<IFooBar>*, std::vector<std::unique_ptr<IFooBar> > >, boost::use_default, boost::use_default, boost::use_default, boost::use_default>, IFooBar, long int, boost::any_iterator_buffer<64ul> >’:
/usr/local/include/boost/range/detail/any_iterator_wrapper.hpp:371:15:   required from ‘class boost::range_detail::any_random_access_iterator_wrapper<boost::indirect_iterator<__gnu_cxx::__normal_iterator<std::unique_ptr<IFooBar>*, std::vector<std::unique_ptr<IFooBar> > >, boost::use_default, boost::use_default, boost::use_default, boost::use_default>, const IFooBar&, long int, boost::any_iterator_buffer<64ul> >’
/usr/local/include/boost/range/detail/any_iterator.hpp:493:53:   required from ‘boost::range_detail::any_iterator<Value, Traversal, Reference, Difference, Buffer>::any_iterator(const WrappedIterator&, typename boost::disable_if<typename boost::range_detail::is_any_iterator<WrappedIterator>::type, boost::range_detail::any_iterator<Value, Traversal, Reference, Difference, Buffer>::disabler>::type*) [with WrappedIterator = boost::indirect_iterator<__gnu_cxx::__normal_iterator<std::unique_ptr<IFooBar>*, std::vector<std::unique_ptr<IFooBar> > >, boost::use_default, boost::use_default, boost::use_default, boost::use_default>; Value = IFooBar; Traversal = boost::random_access_traversal_tag; Reference = const IFooBar&; Difference = long int; Buffer = boost::any_iterator_buffer<64ul>; typename boost::disable_if<typename boost::range_detail::is_any_iterator<WrappedIterator>::type, boost::range_detail::any_iterator<Value, Traversal, Reference, Difference, Buffer>::disabler>::type = boost::range_detail::any_iterator<IFooBar, boost::random_access_traversal_tag, const IFooBar&, long int, boost::any_iterator_buffer<64ul> >::disabler]’
/usr/local/include/boost/range/iterator_range_core.hpp:183:42:   required from ‘boost::iterator_range<IteratorT>::iterator_range(Iterator, Iterator) [with Iterator = boost::indirect_iterator<__gnu_cxx::__normal_iterator<std::unique_ptr<IFooBar>*, std::vector<std::unique_ptr<IFooBar> > >, boost::use_default, boost::use_default, boost::use_default, boost::use_default>; IteratorT = boost::range_detail::any_iterator<IFooBar, boost::random_access_traversal_tag, const IFooBar&, long int, boost::any_iterator_buffer<64ul> >]’
/usr/local/include/boost/range/any_range.hpp:131:50:   required from ‘boost::range_detail::any_range<Value, Traversal, Reference, Difference, Buffer>::any_range(const WrappedRange&) [with WrappedRange = boost::range_detail::indirected_range<std::vector<std::unique_ptr<IFooBar> > >; Value = IFooBar; Traversal = boost::random_access_traversal_tag; Reference = const IFooBar&; Difference = long int; Buffer = boost::use_default]’
main.cpp:21:45:   required from here
/usr/local/include/boost/range/detail/any_iterator_wrapper.hpp:460:31: error: cannot allocate an object of abstract type ‘IFooBar’
             virtual Reference dereference() const
                               ^
main.cpp:7:8: note:   since type ‘IFooBar’ has pure virtual functions
 struct IFooBar {
        ^
